# final_challenge2026

./: README.md  package.xml  setup.cfg  setup.py
config/: homography_config.yaml  lane_detect_follow_config.yaml  localization_config.yaml  partb_config.yaml  safety_controller_config.yaml
config/testing/real/: real_traffic_light_test_config.yaml
config/testing/sim/: traffic_light_test_config.yaml
final_challenge2026/: __init__.py  homography_transformer.py  homography_transformer_OLD.py
final_challenge2026/part_a/: homography_transformer.py  lane_detector_node.py  lane_follower_node.py
final_challenge2026/part_b/: drive_command_node.py  homography_transformer.py  image_publisher_node.py  parking_meter_node.py  path_planner_node.py  traffic_light_node.py  yolo_detection_node.py
final_challenge2026/part_b/computer_vision/: color_segmentation.py
launch/: part_a.launch.xml  part_b.launch.xml
launch/testing/real/: real_traffic_light_test.launch.xml
launch/testing/sim/: traffic_light_test.launch.xml
scripts/: homography_transformer.py  lane_detector_node.py  lane_follower_node.py
scripts/part_a/: lane_follower_node.py
