<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_challenge2026</name>
  <version>0.0.0</version>
  <description>Final challenge package for the RSS racecar</description>
  <maintainer email="racecar@mit.edu">MIT RSS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vs_msgs</depend>
  <depend>visual_servoing</depend>
  <depend>torch</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
